Search alignment and image vertical height issues
Search alignment and image vertical height issues

--- a/LMS.App/ClientApp/src/styles.css
+++ b/LMS.App/ClientApp/src/styles.css
@@ -1288,6 +1288,9 @@ input[type="number"]::-webkit-outer-spin-button {
   height: 100%;
   display: flex;
   overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  background: #000;
 }
 
 .school-grid-thumbnail .medium-thumnail {
